[gd_scene load_steps=2 format=3 uid="uid://blk3nwgjh1k6k"]

[ext_resource type="Script" path="res://Scripts/adventure_death_screen.gd" id="1_p3dsk"]

[node name="AdventureDeathScreen" type="Control" node_paths=PackedStringArray("score_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3dsk")
dungeon_scene = "res://Scenes/dungeon.tscn"
menu_scene = "res://Scenes/menu.tscn"
score_label = NodePath("VBoxContainer/Score")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -64.0
offset_right = 69.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="EMPTY" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="DeathMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LOL YOU DIED?!!?!"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
